<resources>
    <string name="app_name">Lernplan TimeLogger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Time Logger</string>
    <string name="nav_header_subtitle">Lernplaner für das Studium</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_today">Today</string>
    <string name="menu_tomarrow">Tomarrow</string>
    <string name="menu_week">Week</string>
    <string name="menu_month">Month</string>
    <string name="menu_semester">Semester</string>
    <string name="menu_analytics">Analytics</string>
</resources>