<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_baseline_today_24"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_tomarrow"
            android:icon="@drawable/ic_baseline_calendar_view_day_24"
            android:title="@string/menu_tomarrow" />
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/ic_baseline_calendar_view_week_24"
            android:title="@string/menu_week" />
        <item
            android:id="@+id/nav_month"
            android:icon="@drawable/ic_baseline_calendar_view_month_24"
            android:title="@string/menu_month" />
        <item
            android:id="@+id/nav_semester"
            android:icon="@drawable/ic_baseline_calendar_month_24"
            android:title="@string/menu_semester" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_baseline_analytics_24"
            android:title="@string/menu_analytics" />
    </group>
</menu>